# Mechanical_Design

./: CMakeLists.txt  Mechanical_Design.sln  README.md  input.txt
GearDesign/: CMakeLists.txt  axledesignui.cpp  axledesignui.h  bearingdesignui.cpp  bearingdesignui.h  bearingdesignui.ui  designinfo.cpp  designinfo.h  designvec.cpp  designvec.h  geardesignui.cpp  geardesignui.h  geardesignui.ui  keydesignui.cpp  keydesignui.h  keydesignui.ui  main.cpp  mechanicaldesign.cpp  mechanicaldesign.h  mechanicaldesign.ui  res.qrc
MechanicalDesign/: CMakeLists.txt  res.qrc
MechanicalDesign/src/: axledesignui.cpp  axledesignui.h  bearingdesignui.cpp  bearingdesignui.h  designvec.h  geardesignui.cpp  geardesignui.h  keydesignui.cpp  keydesignui.h  main.cpp  mechanicaldesign.cpp
MechanicalDesign/ui/: axledesignui.ui  mechanicaldesign.ui
Mechanical_Design/: Mechanical_Design.vcxproj  Mechanical_Design.vcxproj.filters  axle_design.cpp  axle_design.h  bearing.h  bearing_design.cpp  bearing_design.h  bevel_gear.cpp  bevel_gear.h  bevel_gear_drive.cpp  bevel_gear_drive.h  deep_bearing.cpp  design.h  design_vec.cpp  design_vec.h  drive_design.h  gear.h  gear_drive.cpp  gear_drive.h  interaction.cpp  interaction.h  iteraction.cpp  iteraction.h  key.h  main.cpp  mechanical_design.cpp  mechanical_design.h  outputter.h  part.h  spur_gear.cpp  spur_gear.h  spur_gear_drive.cpp  spur_gear_drive.h
Mechanical_Design/include/: bevel_gear.h  design.h  drive_design.h  gear.h  gear_drive.h  part.h  spur_gear.h
Mechanical_Design/src/: CMakeLists.txt  bevel_gear.cpp  main.cpp  spur_gear.cpp
include/DriveDesign/: spur_gear_drive.h
include/Part/: axle.h  bevel_gear.h  gear.h  part.h  spur_gear.h
include/PartDesign/: key_design.h
src/DriveDesign/: bevel_gear_drive.cpp  drive_design.cpp  gear_drive.cpp
src/Frame/: design_vec.cpp  interaction.cpp  outputter.cpp
src/Part/: axle.cpp  bearing.cpp  bevel_gear.cpp  key.cpp  part.cpp  spur_gear.cpp
src/PartDesign/: key_design.cpp  part_design.h
